--- a/03_klassikomplekt/first.html
+++ b/03_klassikomplekt/first.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
+<!-- This tells the browser we are using modern HTML (HTML5) -->
+
 <html lang="en">
 <head>
+    <!-- This makes sure special characters display correctly -->
     <meta charset="UTF-8">
+
+    <!-- This helps the page adjust on different screen sizes -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- This text appears in the browser tab -->
+    <title>Simple List Example</title>
 </head>
+
 <body>
-    <!-- you can take comments by Cmd+/ or Ctrl+/ -->
-     <!-- can take ul by just typing ul -->
+    <!-- This is an HTML comment.
+         The browser ignores everything inside these arrows.
+         Shortcut: Ctrl + / (Windows) or Cmd + / (Mac) -->
+
+    <!-- <ul> means "unordered list" (a bullet list) -->
     <ul>
+
+        <!-- <li> means "list item" -->
         <li>Juku</li>
+
+        <!-- Each <li> is one bullet point -->
         <li>Juku</li>
+
+        <!-- Another list item -->
         <li>Mati</li>
+
     </ul>
+
 </body>
 </html>
