--- a/03_klassikomplekt/03_resistor.html
+++ b/03_klassikomplekt/03_resistor.html
@@ -16,32 +16,58 @@
             r1=new Resistor2(120, ctx, 250, 350, 100);
             r2=new Resistor2(140, ctx, 250, 350, 200);
 
+            //===new for this==
+            //// During page load: Make sliders match resistor values
             document.getElementById("range1").value=String(r1.getR());
             document.getElementById("range2").value = String(r2.getR());
 
-            // Optional: update displayed values as well
-            document.getElementById("val1").innerText = r1.getR();
-            document.getElementById("val2").innerText = r2.getR();
+            // During page load: Make number displays match resistor values
+            document.getElementById("val1").innerText = r1.getR(); // Show "120" next to slider1
+            document.getElementById("val2").innerText = r2.getR(); // Show "140" next to slider2
 
         }   
+        //this function runs when slider 1 moves
         // Slider handlers (called while dragging)
         function onRange1(input) {
-        const v = input.valueAsNumber;
-        r1.setR(v);
-        document.getElementById("val1").innerText = v;
+            // 📏 STEP 1: Read slider position (like asking "where is the thumb?")
+            // input = the slider itself, valueAsNumber = "give me the number"
+            const v = input.valueAsNumber;
+            // Example: If thumb is at 450 → v = 450
+
+            // 🔄 STEP 2: Tell resistor 1 "your new value is 450 ohms!"
+            r1.setR(v);
+
+            // 📱 STEP 3: Update the number next to slider
+            // Find the <span id="val1"></span> and put "450" inside it
+            document.getElementById("val1").innerText = v;
+            // Now it shows: [slider] 450 Ω
         }
+        //this function runs when the slider 2 moves
         function onRange2(input) {
-        const v = input.valueAsNumber;
-        r2.setR(v);
-        document.getElementById("val2").innerText = v;
+            const v = input.valueAsNumber;
+            r2.setR(v);
+            document.getElementById("val2").innerText = v;
         }
     </script>
 </head>
 <body onload="startPage()">
+    
     <canvas id="canvas1" width="400" height="300"></canvas><br />
-    <input type="range" id="range1" min="100" max="1000" onclick="r1.setR(this.valueAsNumber)" />
-    <input type="range" id="range1" min="1000" max="10000" onclick="r2.setR(this.valueAsNumber)" />
 
+    <!--══════════════════════════════════════════════════════════════════════════ -->
+    <!-- Slider + numeric display for resistor 1 -->
+    <!-- 🔢 Lowest value: 100 ohms -->
+    <!-- 🔢 Highest value: 1000 ohms -->
+    <!-- ⚡ Runs onRange1() WHILE dragging -->
+    <input type="range" id="range1" min="100" max="1000" oninput="onRange1(this)" />
+    <!-- Updates to 150Ω, 450Ω, etc when you slide -->
+    <span id="val1"></span> Ω
+
+
+    <!--══════════════════════════════════════════════════════════════════════════ -->
+    <!-- Slider + numeric display for resistor 2 -->
+    <input type="range" id="range2" min="1000" max="10000" oninput="onRange2(this)" />
+    <span id="val2"></span> Ω
 </body >
 </html>
 
